# Melampo-AI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-enterprise.txt  requirements-research.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  core_consolidation_map.md  enterprise_ai_rag_evolution.md  final_treatise_decision_record.md  imaging_model_strategy.md  index.html  index.md  neuro_vector_evolution_strategy.md  open_clinical_data.md
docs/dataset_cards/: clinical_memory_dataset_card.md
docs/model_cards/: melampo_model_stack_card.md
docs/validation/: clinical_benchmarking_and_prospective_validation.md
examples/: chestxray14_metadata_sample.csv  open_clinical_case_chest_xray_synthetic.json  openi_metadata_sample.csv
src/: LEGACY_NOTICE.md  README  README.md  placeholder.txt
src/dreaming/: README.md  generative_sleep.py
src/inference/: README.md
src/melampo/: IMPLEMENTATION_STATUS.md  README.md  ROADMAP.md  __init__.py  app.py  cli.py  config.py  prototype.py  types.py
src/melampo/areas/: __init__.py  case_context_area.py  epidemiology_area.py  language_listening_area.py  visual_diagnostic_area.py
src/melampo/clinical/: README.md  __init__.py  schemas.py  standards.py
src/melampo/data/: README.md  __init__.py  constants.py  dicom_adapter.py  document_processing.py  fhir_mapper.py  ingestion.py  normalization.py
src/melampo/datasets/: chestxray14_loader.py  open_catalog.py  openi_loader.py
src/melampo/evaluation/: README.md  __init__.py  calibration.py  clinical_benchmark.py  clinical_validation.py  falsification_program.py  metrics.py  quantum_gate.py  (+3 more)
src/models/: README.md  quantum_intuition.py  sensory_cortex.py
src/resources/: README.md  architecture_overview.md  model_registry.txt
src/training/: README.md  melampo_trainer.py
tests/: test_area_coherence_and_coordinator.py  test_area_modules.py  test_area_signals.py  test_chestxray14_loader.py  test_cli.py  test_clinical_pipeline_smoke.py  test_critique_loop.py  test_decision_trace.py  test_differential_engine.py  test_dream_trainer.py  test_enterprise_adapters.py  test_enterprise_orchestration.py  test_intuition_calibration.py  test_intuition_engine.py  test_metrics_catalog.py  test_neuro_dynamics_and_self_evolution.py  test_open_clinical_data.py  test_openi_loader.py  test_pipeline_coordinator.py  test_policy_and_belief.py  test_policy_stack.py  test_prototype_runner.py  test_reasoning_smoke.py  test_registry_bootstrap.py  test_remote_imaging_provider.py  test_replay_filter.py  test_retriever_and_ranker.py  test_runtime_and_quantum_gate.py  test_runtime_configuration.py  test_runtime_services.py  test_runtime_smoke.py  test_service_contract.py  test_service_registry.py  test_support_contradiction.py  test_validation_primitives.py  test_vector_adapters_and_ingestion.py  test_volume_encoder.py
(+92 files in other folders)
