[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melampo"
version = "0.1.0"
description = "Project Melampo baseline scaffold for multimodal clinical intuition research"
readme = "src/README.md"
requires-python = ">=3.11"
authors = [
  { name = "Francesco Lattari e altri" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.9",
]
clinical = [
  "fhir.resources>=7.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
]
document = [
  "docling>=2.0",
]
retrieval = [
  "pymilvus>=2.4",
  "faiss-cpu>=1.8",
  "sentence-transformers>=2.6",
]
imaging = [
  "pydicom>=2.4",
  "nibabel>=5.2",
  "SimpleITK>=2.3",
  "Pillow>=10.0",
  "opencv-python>=4.9",
  "monai>=1.3",
]
ml = [
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers>=4.40",
  "accelerate>=0.29",
  "einops>=0.7",
  "timm>=0.9",
  "scikit-learn>=1.4",
]
api = [
  "httpx>=0.27",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
quantum = [
  "qiskit>=1.0",
  "pennylane>=0.35",
]
viz = [
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66",
]
enterprise = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.9",
  "fhir.resources>=7.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "docling>=2.0",
  "pymilvus>=2.4",
  "faiss-cpu>=1.8",
  "sentence-transformers>=2.6",
  "pydicom>=2.4",
  "nibabel>=5.2",
  "SimpleITK>=2.3",
  "Pillow>=10.0",
  "opencv-python>=4.9",
  "monai>=1.3",
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers>=4.40",
  "accelerate>=0.29",
  "einops>=0.7",
  "timm>=0.9",
  "scikit-learn>=1.4",
  "httpx>=0.27",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "qiskit>=1.0",
  "pennylane>=0.35",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66",
]

[project.scripts]
melampo-prototype = "melampo.cli:main"
melampo-prototype-cxr = "melampo.cli:main_cxr"
melampo-prototype-openi = "melampo.cli:main_openi"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["melampo*"]
